main.tf
resource "aws_vpc" "name" {
  cidr_block = var.vpc_cidr
  enable_dns_hostnames = var.enable_dns_hostnames
  tags = merge(
    var.comman_tags,
    var.vpc_tags,
    {
        Name = local.Name

    }
    )
}

resource "aws_internet_gateway" "name" {
    vpc_id = aws_vpc.name.id

    tags = merge(
        var.comman_tags,
        var.igw_tags,
        {
            Name = local.Name
        }

    )
  
}

resource "aws_subnet" "public" {
  count = length(var.public_subnet_cidr)
  vpc_id     = aws_vpc.name.id
  cidr_block = var.public_subnet_cidr[count.index]
  availability_zone = local.az_names[count.index]
  tags = merge(
    var.comman_tags,
    var.public_subnet_tags,
    {
        Name = "${local.Name}-public-${local.az_names[count.index]}"
    }
  )
}
resource "aws_subnet" "private" {
  count = length(var.private_subnet_cidr)
  vpc_id     = aws_vpc.name.id
  cidr_block = var.private_subnet_cidr[count.index]
  availability_zone = local.az_names[count.index]
  tags = merge(
    var.comman_tags,
    var.private_subnet_tags,
    {
        Name = "${local.Name}-private-${local.az_names[count.index]}"
    }
  )
}
resource "aws_subnet" "database" {
  count = length(var.database_subnet_cidr)
  vpc_id     = aws_vpc.name.id
  cidr_block = var.database_subnet_cidr[count.index]
  availability_zone = local.az_names[count.index]
  tags = merge(
    var.comman_tags,
    var.private_subnet_tags,
    {
        Name = "${local.Name}-database-${local.az_names[count.index]}"
    }
  )
}

resource "aws_eip" "eip" {
  domain = "vpc"
}
resource "aws_nat_gateway" "main" {
  allocation_id = aws_eip.eip.id
  subnet_id = aws_subnet.public[0].id
  tags = merge(
    var.comman_tags,
    var.nat_gateway_tags,
    {
        Name="${local.Name}"
    }
  )
  
  depends_on = [ aws_internet_gateway.name ]
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.name.id
    tags = merge(
        var.comman_tags,
        var.public_route_table_tags,
        {
            Name = "${local.Name}-public"
        }
    )
  
}

resource "aws_route_table" "private" {
    vpc_id = aws_vpc.name.id
    tags = merge(
        var.comman_tags,
        var.private_route_table_tags,
        {
            Name = "${local.Name}-private"
        }
    )
  
}
resource "aws_route_table" "database" {
    vpc_id = aws_vpc.name.id
    tags = merge(
        var.comman_tags,
        var.database_route_table_tags,
        {
            Name = "${local.Name}-database"
        }
    )
  
}

resource "aws_route" "public_route" {
  route_table_id            = aws_route_table.public.id
  destination_cidr_block    = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.name.id
}

resource "aws_route" "private_route" {
  route_table_id            = aws_route_table.private.id
  destination_cidr_block    = "0.0.0.0/0"
  nat_gateway_id = aws_nat_gateway.main.id
}

resource "aws_route" "database_route" {
  route_table_id            = aws_route_table.database.id
  destination_cidr_block    = "0.0.0.0/0"
  nat_gateway_id = aws_nat_gateway.main.id
}
resource "aws_route_table_association" "public" {
    count = length(var.public_subnet_cidr)
    subnet_id = element(aws_subnet.public[*].id, count.index)
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private" {
    count = length(var.private_subnet_cidr)
    subnet_id = element(aws_subnet.private[*].id, count.index)
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "database" {
    count = length(var.database_subnet_cidr)
    subnet_id = element(aws_subnet.database[*].id, count.index)
  route_table_id = aws_route_table.database.id
}
